docs: finish the intial draft of phone number reference docs

--- a/src/pages/reference-js/phone-number/phone-number.mdx
+++ b/src/pages/reference-js/phone-number/phone-number.mdx
@@ -56,3 +56,17 @@ function toString(): string;
 Returns the phone number value in [E.164 format](https://en.wikipedia.org/wiki/E.164).
 
 The value is taken from the PhoneNumber.phoneNumber attribute.
+
+## Additional Methods
+
+In addition to the methods listed above, the `PhoneNumber` class also has the following methods:
+
+### Validation
+
+*   [`prepareVerification()`](/reference-js/phone-number/verification#prepareverification)
+*   [`attemptVerification()`](/reference-js/phone-number/verification#attemptverification)
+
+### Second Factor
+
+*   [`makeDefaultSecondFactor()`](/reference-js/phone-number/second-factor#makedefaultsecondfactor)
+*   [`setReservedForSecondFactor()`](/reference-js/phone-number/second-factor#setreservedforsecondfactor)
