--- a/src/pages/reference-js/phone-number/second-factor.mdx
+++ b/src/pages/reference-js/phone-number/second-factor.mdx
@@ -22,3 +22,13 @@ function setReservedForSecondFactor(params: SetReservedForSecondFactorParams): P
 ```
 
 Marks this phone number as reserved for [multi-factor authentication](https://clerk.com/docs/authentication/custom-flows/multifactor) (2FA) or not.
+
+### `SetReservedForSecondFactorParams`
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>reserved</code>, <code>boolean</code>, <>Pass <strong>true</strong> to mark this phone number as reserved for 2FA, or <strong>false</strong> to disable 2FA for this phone number.</>]},
+  ]}
+/>
