--- a/src/pages/quickstarts/full-stack/remix.mdx
+++ b/src/pages/quickstarts/full-stack/remix.mdx
@@ -216,7 +216,7 @@ The functionality of the components are controlled by the instance settings you 
 
 ### Build Your Sign Up
 
-```tsx filename="app/routes/sign-up/$.tsx" copy
+```tsx filename="app/routes/sign-up.$.tsx" copy
 import { SignUp } from "@clerk/remix";
 
 export default function SignUpPage() {
@@ -231,7 +231,7 @@ export default function SignUpPage() {
 
 ### Build Your Sign In
 
-```tsx filename="app/routes/sign-in/$.tsx" copy
+```tsx filename="app/routes/sign-in.$.tsx" copy
 import { SignIn } from "@clerk/remix";
 
 export default function SignInPage() {
