chore: add missing methods

--- a/src/pages/reference-js/external-account/external-account.mdx
+++ b/src/pages/reference-js/external-account/external-account.mdx
@@ -18,7 +18,8 @@ External account must be verified, so that we can make sure they can be assigned
   rows={[
  {cells: [<code>id</code>, <code>string</code>, <>A unique identifier for this external account.</>]},
 {cells: [<code>identificationId</code>, <code>string</code>, <>The identification with which this external account is associated.</>]},
-{cells: [<code>provider</code>, <code>string</code>, <>The provider name e.g. `oauth_google`</>]},
+{cells: [<code>provider</code>, <code>string</code>, <>The provider name e.g. `google`</>]},
+{cells: [<code>publicMetadata</code>, <code>object</code>, <>Metadata provided about the user from the provider</>]},
 {cells: [<code>providerUserId</code>, <code>string</code>, <>The unique id of the user in the provider.</>]},
 {cells: [<code>emailAddress</code>, <code>string</code>, <>The provided email address of the user.</>]},
 {cells: [<code>approvedScopes</code>, <code>string[]</code>, <>The scopes that the user has granted access to.</>]},
@@ -58,3 +59,33 @@ function destroy(): Promise<void>;
 
 Delete this external account.
 
+
+### `providerSlug()`
+
+```typescript
+function providerSlug(): string;
+```
+
+A getter method for the `provider` attribute
+
+### `providerTitle()`
+
+```typescript
+function providerTitle(): string;
+```
+
+The title of the provider with the word "Account" appended.
+
+EG: `google` becomes `Google Account`
+
+### `accountIdentifier()`
+
+```typescript
+function accountIdentifier(): string;
+```
+
+The identifier of the account, either the:
+
+- `username` if present
+- `emailAddress` if present
+- `label`
