chore: add all user attributes

--- a/src/pages/reference-js/user/user.mdx
+++ b/src/pages/reference-js/user/user.mdx
@@ -7,51 +7,76 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 ## Attributes
 
-  id: string;
-  externalId: string | null;
-  primaryEmailAddressId: string | null;
-  primaryEmailAddress: EmailAddressResource | null;
-  primaryPhoneNumberId: string | null;
-  primaryPhoneNumber: PhoneNumberResource | null;
-  primaryWeb3WalletId: string | null;
-  primaryWeb3Wallet: Web3WalletResource | null;
-  username: string | null;
-  fullName: string | null;
-  firstName: string | null;
-  lastName: string | null;
-  profileImageUrl: string;
-  imageUrl: string;
-  emailAddresses: EmailAddressResource[];
-  phoneNumbers: PhoneNumberResource[];
-  web3Wallets: Web3WalletResource[];
-  externalAccounts: ExternalAccountResource[];
-
-  /**
-   * @experimental
-   */
-  samlAccounts: SamlAccountResource[];
-  organizationMemberships: OrganizationMembershipResource[];
-  passwordEnabled: boolean;
-  totpEnabled: boolean;
-  backupCodeEnabled: boolean;
-  twoFactorEnabled: boolean;
-  publicMetadata: UserPublicMetadata;
-  unsafeMetadata: UserUnsafeMetadata;
-  lastSignInAt: Date | null;
-  createOrganizationEnabled: boolean;
-  deleteSelfEnabled: boolean;
-  updatedAt: Date | null;
-  createdAt: Date | null;
-  get verifiedExternalAccounts(): ExternalAccountResource[];
-  get unverifiedExternalAccounts(): ExternalAccountResource[];
-  get hasVerifiedEmailAddress(): boolean;
-  get hasVerifiedPhoneNumber(): boolean;
-
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+    {cells: [<code>id</code>,  <code>string</code>,  <>A unique identifier for the user.</>]},
+{cells: [<code>firstName</code>,  <code>string | null</code>,  <>The user's first name.</>]},
+{cells: [<code>lastName</code>,  <code>string</code>,  <>The user's last name.</>]},
+{cells: [<code>fullName</code>,  <code>string | null</code>,  <>The user's full nam</>]},
+{cells: [<code>username</code>,  <code>string | null</code>,  <>The user's username.</>]},
+{cells: [<code>imageUrl</code>,  <code>string</code>,  <>Holds the users profile image or avata</>]},
+{cells: [<code>profileImageUrl</code>,  <code>string | null</code>,  <>The URL for the user's profile image. (deprecated in favor of image_url)</>]},
+{cells: [<code>primaryEmailAddress</code>,  <code><a href="/reference-js/email-address/email-address">EmailAddress</a> | null</code>,  <>Information about the user's primary email address.</>]},
+{cells: [<code>primaryEmailAddressId</code>,  <code>string | null</code>,  <>The unique identifier for the <a href="/reference-js/email-address/email-address">EmailAddress</a> that the user has set as primary.</>]},
+{cells: [<code>emailAddresses</code>,  <code><a href="/reference-js/email-address/email-address">EmailAddress</a>[]</code>,  <>Any array of all the <a href="/reference-js/email-address/email-address">EmailAddress</a> objects associated with the user. Includes the primary.</>]},
+{cells: [<code>hasVerifiedEmailAddress</code>,  <code>boolean</code>,  <>A getter boolean to check if the user has verified an email address.</>]},
+{cells: [<code>primaryPhoneNumber</code>,  <code><a href="/reference-js/phone-number/phone-number">PhoneNumber</a>[] | null</code>,  <>Information about the user's primary phone number.</>]},
+{cells: [<code>primaryPhoneNumberId</code>,  <code>string | null</code>,  <>The unique identifier for the <a href="/reference-js/phone-number/phone-number">PhoneNumber</a> that the user has set as primary.</>]},
+{cells: [<code>phoneNumbers</code>,  <code><a href="/reference-js/phone-number/phone-number">PhoneNumber</a>[]</code>,  <>Any array of all the <a href="/reference-js/phone-number/phone-number">PhoneNumber</a> objects associated with the user. Includes the primary.</>]},
+{cells: [<code>hasVerifiedPhoneNumber</code>,  <code>boolean</code>,  <>A getter boolean to check if the user has verified a phone number.</>]},
+{cells: [<code>primaryWeb3WalletId</code>,  <code>string | null</code>,  <>The unique identifier for the <a href="/reference-js/web3-wallet/web3-wallet">Web3Wallet</a> that the user signed up with.</>]},
+{cells: [<code>primaryWeb3Wallet</code>,  <code><a href="/reference-js/web3-wallet/web3-wallet">Web3Wallet</a></code>,  <>The <a href="/reference-js/web3-wallet/web3-wallet">Web3Wallet</a> that the user signed up with.</>]},
+{cells: [<code>web3Wallets</code>,  <code><a href="/reference-js/web3-wallet/web3-wallet">Web3Wallet</a>[]</code>,  <>Any array of all the <a href="/reference-js/web3-wallet/web3-wallet">Web3Wallet</a> objects associated with the user. Includes the primary.</>]},
+{cells: [<code>externalAccounts</code>,  <code><a href="/reference-js/external-account">ExternalAccount</a>[]</code>,  <>An array of all the <a href="/reference-js/external-account">ExternalAccount</a> objects associated with the user via OAuth.  <strong>Note</strong>: This includes both verified &amp; unverified external accounts.</>]},
+{cells: [<code>verifiedExternalAccounts</code>,  <code><a href="/reference-js/external-account">ExternalAccount</a>[]</code>,  <>A getter for the user's list of verified external accounts.</>]},
+{cells: [<code>unverifiedExternalAccounts</code>,  <code><a href="/reference-js/external-account">ExternalAccount</a>[]</code>,  <>A getter for the user's list of unverified external accounts.</>]},
+{cells: [<code>samlAccounts</code>,  <code>SamlAccount[]</code>,  <>An <strong>experimental</strong> list of saml accounts associated with the user.</>]},
+{cells: [<code>organizationMemberships</code>,  <code><a href="/reference-js/organization-membership">OrganizationMembership</a></code>,  <>A list of <code><a href="/reference-js/organization-membership">OrganizationMembership</a></code>s representing the list of organizations the user is member with.</>]},
+{cells: [<code>passwordEnabled</code>,  <code>boolean</code>,  <>A boolean indicating whether the user has a password on their account.</>]},
+{cells: [<code>totpEnabled</code>,  <code>boolean</code>,  <>Whether the user has enabled TOTP by generating a TOTP secret and verifying it via an authenticator ap</>]},
+{cells: [<code>twoFactorEnabled</code>,  <code>boolean</code>,  <>Whether the user has enabled two-factor authentication.</>]},
+{cells: [<code>backupCodeEnabled</code>,  <code>boolean</code>,  <>Whether the user has enabled Backup codes.</>]},
+{cells: [<code>createOrganizationEnabled</code>,  <code>boolean</code>,  <>Whether the organization creation is enabled for the user or not.</>]},
+{cells: [<code>deleteSelfEnabled</code>,  <code>boolean</code>,  <>Whether the user is able to delete their own account or not.</>]},
+{cells: [<code>publicMetadata</code>,  <code>{"{[string]: any} | null"}</code>,  <>Metadata that can be read from the <a href="https://reference.clerk.dev/reference/frontend-api-reference">Frontend API</a> and <a href="https://clerk.dev/docs/reference/backend-api">Backend API</a> and can be set only from the Backend API .</>]},
+{cells: [<code>unsafeMetadata</code>,  <code>{"{[string]: any} | null"}</code>,  <>Metadata that can be read and set from the frontend. One common use case for this attribute is to use it to implement custom fields that will be attached to the <code>User</code> object. Please note that there is also an <code>unsafeMetadata</code> attribute in the SignUp object. The value of that field will be automatically copied to the user's unsafe metadata once the sign up is complete.</>]},
+{cells: [<code>lastSignInAt</code>,  <code>Date</code>,  <>Date when the user last signed in. May be empty if the user has never signed in.</>]},
+{cells: [<code>createdAt</code>,  <code>Date</code>,  <>Date when the user was first created.</>]},
+{cells: [<code>updatedAt</code>,  <code>Date</code>,  <>Date of the last time the user was updated.</>]},
+  ]}
+/>
 
 ## Methods
 
-  update: (params: UpdateUserParams) => Promise<UserResource>;
-  delete: () => Promise<void>;
-  setProfileImage: (params: SetProfileImageParams) => Promise<ImageResource>;
-  getSessions: () => Promise<SessionWithActivitiesResource[]>;
-  isPrimaryIdentification: (ident: EmailAddressResource | PhoneNumberResource | Web3WalletResource) => boolean;
+### `update()`
+
+```typescript
+function update: (params: UpdateUserParams) => Promise<UserResource>;
+```
+
+### `delete()`
+
+```typescript
+function delete: () => Promise<void>;
+```
+
+### `setProfileImage()`
+
+```typescript
+function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResource>;
+```
+
+### `getSessions()`
+
+```typescript
+function getSessions: () => Promise<SessionWithActivitiesResource[]>;
+```
+
+### `isPrimaryIdentification()`
+
+```typescript
+function isPrimaryIdentification: (ident: EmailAddressResource | PhoneNumberResource | Web3WalletResource) => boolean;
+```
+
