chore: add in text from upstream

--- a/src/pages/reference-js/user/user.mdx
+++ b/src/pages/reference-js/user/user.mdx
@@ -5,6 +5,14 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `User`
 
+The `User` object holds all the information for a user of your application and provides a set of methods to manage their account. Users have a unique authentication identifier which might be their email address, phone number or a username.
+
+Users can be contacted at their primary email address or primary phone number. They can have more than one registered email address, but only one of them will be their primary email address. Same thing with phone numbers; they can have more than one, but only one will be their primary. At the same time, they can also have one more more external accounts by connecting to OAuth providers such as Google, Apple, Facebook & many more.
+
+Finally, `User` objects hold profile data like their name, a profile image and a set of metadata that can be used internally to store arbitrary information. The metadata are split into public and private. Both types are set from the [Backend API](https://clerk.dev/docs/reference/backend-api), but public metadata can be accessed from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference) and [Backend API](https://clerk.dev/docs/reference/backend-api).
+
+The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to help retrieve and update user information and authentication status.
+
 ## Attributes
 
 <Tables
@@ -56,11 +64,19 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 function update: (params: UpdateUserParams) => Promise<UserResource>;
 ```
 
+Updates the user's attributes. Use this method to save information you collected about the user.
+
+#### `UpdateUserParams`
+
+// TODO: Write
+
 ### `delete()`
 
 ```typescript
 function delete: () => Promise<void>;
 ```
+
+Delete the current user.
 
 ### `setProfileImage()`
 
@@ -68,11 +84,27 @@ function delete: () => Promise<void>;
 function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResource>;
 ```
 
+Add the user's profile image or replace it if one already exists. This method will upload an image and associate it with the user.
+
+#### `SetProfileImageParams`
+
+// TODO: Write
+
+#### Returns
+
+// TODO: Write
+
 ### `getSessions()`
 
 ```typescript
-function getSessions: () => Promise<SessionWithActivitiesResource[]>;
+function getSessions: () => Promise<SessionWithActivities[]>;
 ```
+
+Retrieves all **active** sessions for this user. This method uses a cache so a network request will only be triggered only once.
+
+#### Returns
+
+// TODO: Write
 
 ### `isPrimaryIdentification()`
 
@@ -80,3 +112,8 @@ function getSessions: () => Promise<SessionWithActivitiesResource[]>;
 function isPrimaryIdentification: (ident: EmailAddressResource | PhoneNumberResource | Web3WalletResource) => boolean;
 ```
 
+A check whether or not the given identifier is the primary identifier for the user.
+
+#### Params
+
+// TODO: Write
