docs: initial work to document deleted object and totp objects

--- a/src/pages/reference-js/user/totp.mdx
+++ b/src/pages/reference-js/user/totp.mdx
@@ -5,7 +5,46 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Time-based One-time Password
 
-  createTOTP: () => Promise<TOTPResource>;
-  verifyTOTP: (params: VerifyTOTPParams) => Promise<TOTPResource>;
-  disableTOTP: () => Promise<DeletedObjectResource>;
-  createBackupCode: () => Promise<BackupCodeResource>;
+## Methods
+
+### `createTOTP()`
+
+```typescript
+function createTOTP(): Promise<TOTP>;
+```
+
+### `verifyTOTP()`
+
+```typescript
+function verifyTOTP(params: VerifyTOTPParams): Promise<TOTPResource>;
+```
+
+### `disableTOTP()`
+
+```typescript
+function disableTOTP(): Promise<DeletedObject>;
+```
+
+### `createBackupCode()`
+
+```typescript
+function createBackupCode(): Promise<BackupCode>;
+```
+
+## Types
+
+### `TOTPResource`
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>id</code>, <code>string</code>, <>A unique identifier for this TOTP secret</>]},
+{cells: [<code>secret</code>, <code>string</code>, <>The generated TOTP secret. Note: this is only returned to the client upon creation and cannot be retrieved afterwards.</>]},
+{cells: [<code>uri</code>, <code>string</code>, <>A complete TOTP configuration URI including the Issuer, Account, etc that can be pasted to an authenticator app or encoded to a QR code and scanned for convenience. Just like the secret, the URI is exposed to the client only upon creation and cannot be retrieved afterwards.</>]},
+{cells: [<code>verified</code>, <code>boolean</code>, <>Whether this TOTP secret has been verified by the user by providing one code generated with it. TOTP is not enabled on the user unless they have a verified secret.</>]},
+{cells: [<code>backupCodes</code>, <code>string[]</code>, <>A set of fresh generated Backup codes. Note that this will be populated if the feature is enabled in your instance and the user doesn't already have backup codes generated.</>]},
+{cells: [<code>createdAt</code>, <code>Date</code>, <>Creation date of the TOTP secret</>]},
+{cells: [<code>updatedAt</code>, <code>Date</code>, <>Update timestamp of the TOTP secret</>]},
+  ]}
+  />
