chore: add initial text for user profile methods

--- a/src/pages/reference-js/user/password-management.mdx
+++ b/src/pages/reference-js/user/password-management.mdx
@@ -5,5 +5,18 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # User Password Management
 
-  updatePassword: (params: UpdateUserPasswordParams) => Promise<UserResource>;
-  removePassword: (params: RemoveUserPasswordParams) => Promise<UserResource>;
+## `updatePassword()`
+
+```typescript
+function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
+```
+
+Updates the user's password.
+
+## `removePassword()`
+
+```typescript
+function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
+```
+
+Removes the user's password.
