--- a/src/pages/reference-js/user/totp.mdx
+++ b/src/pages/reference-js/user/totp.mdx
@@ -10,8 +10,14 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 ### `createTOTP()`
 
 ```typescript
-function createTOTP(): Promise<TOTP>;
+function createTOTP(): Promise<TOTPResource>;
 ```
+
+Generates a TOTP secret for a user that can be used to register the application on the user's authenticator app of choice. Note that if this method is called again (while still unverified), it replaces the previously generated secret.
+
+#### Returns
+
+// TODO: Write
 
 ### `verifyTOTP()`
 
@@ -19,17 +25,39 @@ function createTOTP(): Promise<TOTP>;
 function verifyTOTP(params: VerifyTOTPParams): Promise<TOTPResource>;
 ```
 
+Verifies a TOTP secret after a user has created it. The user must provide a code from their authenticator app, that has been generated using the previously created secret. This way correct setup and ownership of the authenticator app can be validated.
+
+#### `VerifyTOTPParams`
+
+// TODO: Write
+
+#### Returns
+
+// TODO: Write
+
 ### `disableTOTP()`
 
 ```typescript
 function disableTOTP(): Promise<DeletedObject>;
 ```
 
+Disables TOTP by deleting the user's TOTP secret.
+
+#### Returns
+
+// TODO: Write
+
 ### `createBackupCode()`
 
 ```typescript
-function createBackupCode(): Promise<BackupCode>;
+function createBackupCode(): Promise<BackupCodeResource>;
 ```
+
+Generates a fresh new set of backup codes for the user. Note that if this method is called again, it replaces the previously generated codes.
+
+#### Returns
+
+// TODO: Write
 
 ## Types
 
@@ -44,6 +72,20 @@ function createBackupCode(): Promise<BackupCode>;
 {cells: [<code>uri</code>, <code>string</code>, <>A complete TOTP configuration URI including the Issuer, Account, etc that can be pasted to an authenticator app or encoded to a QR code and scanned for convenience. Just like the secret, the URI is exposed to the client only upon creation and cannot be retrieved afterwards.</>]},
 {cells: [<code>verified</code>, <code>boolean</code>, <>Whether this TOTP secret has been verified by the user by providing one code generated with it. TOTP is not enabled on the user unless they have a verified secret.</>]},
 {cells: [<code>backupCodes</code>, <code>string[]</code>, <>A set of fresh generated Backup codes. Note that this will be populated if the feature is enabled in your instance and the user doesn't already have backup codes generated.</>]},
+{cells: [<code>createdAt</code>, <code>Date</code>, <>Creation date of the TOTP secret</>]},
+{cells: [<code>updatedAt</code>, <code>Date</code>, <>Update timestamp of the TOTP secret</>]},
+  ]}
+  />
+
+### `BackupCodeResource`
+
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>id</code>, <code>string</code>, <>A unique identifier for this TOTP secret</>]},
+{cells: [<code>codes</code>, <code>string[]</code>, <>The generated set of backup codes.</>]},
 {cells: [<code>createdAt</code>, <code>Date</code>, <>Creation date of the TOTP secret</>]},
 {cells: [<code>updatedAt</code>, <code>Date</code>, <>Update timestamp of the TOTP secret</>]},
   ]}
