--- a/src/pages/reference-js/user/create-metadata.mdx
+++ b/src/pages/reference-js/user/create-metadata.mdx
@@ -5,7 +5,67 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Create User Metadata
 
-  createEmailAddress: (params: CreateEmailAddressParams) => Promise<EmailAddressResource>;
-  createPhoneNumber: (params: CreatePhoneNumberParams) => Promise<PhoneNumberResource>;
-  createWeb3Wallet: (params: CreateWeb3WalletParams) => Promise<Web3WalletResource>;
-  createExternalAccount: (params: CreateExternalAccountParams) => Promise<ExternalAccountResource>;
+## `createEmailAddress()`
+
+```typescript
+function createEmailAddress: (params: CreateEmailAddressParams) => Promise<EmailAddress>;
+```
+
+Adds an email address for the user. A new <a href="/reference-js/email-address/email-address">EmailAddress</a> will be created and associated with the user.
+
+### `CreateEmailAddressParams`
+
+// TODO: Write
+
+### Returns
+
+// TODO: Write
+
+## `createPhoneNumber()`
+
+```typescript
+function createPhoneNumber: (params: CreatePhoneNumberParams) => Promise<PhoneNumber>;
+```
+
+Adds a phone number for the user. A new <a href="/reference-js/phone-number/phone-number">PhoneNumber</a> will be created and associated with the user.
+
+### `CreatePhoneNumberParams`
+
+// TODO: Write
+
+### Returns
+
+// TODO: Write
+
+## `createWeb3Wallet()`
+
+```typescript
+function createWeb3Wallet: (params: CreateWeb3WalletParams) => Promise<Web3Wallet>;
+```
+
+Adds a web3 wallet for the user. A new <a href="/reference-js/web3-wallet/web3-wallet">Web3Wallet</a> will be created and associated with the user.
+
+### `CreateWeb3WalletParams`
+
+// TODO: Write
+
+### Returns
+
+// TODO: Write
+
+## `createExternalAccount()`
+
+```typescript
+function createExternalAccount: (params: CreateExternalAccountParams) => Promise<ExternalAccount>;
+```
+
+Adds an external account for the user. A new <a href="/reference-js/external-account">ExternalAccount</a> will be created and associated with the user.
+
+### `CreateExternalAccountParams`
+
+// TODO: Write
+
+### Returns
+
+// TODO: Write
+
