chore: document the update user method

--- a/src/pages/reference-js/user/user.mdx
+++ b/src/pages/reference-js/user/user.mdx
@@ -22,9 +22,9 @@ The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to
     {cells: [<code>id</code>,  <code>string</code>,  <>A unique identifier for the user.</>]},
 {cells: [<code>firstName</code>,  <code>string | null</code>,  <>The user's first name.</>]},
 {cells: [<code>lastName</code>,  <code>string</code>,  <>The user's last name.</>]},
-{cells: [<code>fullName</code>,  <code>string | null</code>,  <>The user's full nam</>]},
+{cells: [<code>fullName</code>,  <code>string | null</code>,  <>The user's full name.</>]},
 {cells: [<code>username</code>,  <code>string | null</code>,  <>The user's username.</>]},
-{cells: [<code>imageUrl</code>,  <code>string</code>,  <>Holds the users profile image or avata</>]},
+{cells: [<code>imageUrl</code>,  <code>string</code>,  <>Holds the users profile image or avatar.</>]},
 {cells: [<code>profileImageUrl</code>,  <code>string | null</code>,  <>The URL for the user's profile image. (deprecated in favor of image_url)</>]},
 {cells: [<code>primaryEmailAddress</code>,  <code><a href="/reference-js/email-address/email-address">EmailAddress</a> | null</code>,  <>Information about the user's primary email address.</>]},
 {cells: [<code>primaryEmailAddressId</code>,  <code>string | null</code>,  <>The unique identifier for the <a href="/reference-js/email-address/email-address">EmailAddress</a> that the user has set as primary.</>]},
@@ -61,14 +61,33 @@ The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to
 ### `update()`
 
 ```typescript
-function update: (params: UpdateUserParams) => Promise<UserResource>;
+function update: (params: UpdateUserParams) => Promise<User>;
 ```
 
 Updates the user's attributes. Use this method to save information you collected about the user.
 
 #### `UpdateUserParams`
 
-// TODO: Write
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>username</code>, <code>string</code>, <>The user's username.</>]},
+{cells: [<code>password</code>, <code>string</code>, <>
+The user's password.
+<br/>
+<br/>
+<strong>This property is deprecated.</strong> This will be removed in the next major version. Please use <a href="/reference-js/user/password-management#updatepassword"><code>updatePassword(params)</code></a> instead
+</>]},
+{cells: [<code>firstName</code>, <code>string</code>, <>The user's first name.</>]},
+{cells: [<code>lastName</code>, <code>string</code>, <>The user's last name.</>]},
+{cells: [<code>primaryEmailAddressId</code>, <code>string</code>, <>The unique identifier for the <a href="/reference-js/email-address/email-address">EmailAddress</a> that the user has set as primary.</>]},
+{cells: [<code>primaryPhoneNumberId</code>,  <code>string | null</code>,  <>The unique identifier for the <a href="/reference-js/phone-number/phone-number">PhoneNumber</a> that the user has set as primary.</>]},
+{cells: [<code>primaryWeb3WalletId</code>,  <code>string | null</code>,  <>The unique identifier for the <a href="/reference-js/web3-wallet/web3-wallet">Web3Wallet</a> that the user signed up with.</>]},
+{cells: [<code>unsafeMetadata</code>,  <code>{"{[string]: any} | null"}</code>,  <>Metadata that can be read and set from the frontend. One common use case for this attribute is to use it to implement custom fields that will be attached to the <code>User</code> object. Please note that there is also an <code>unsafeMetadata</code> attribute in the SignUp object. The value of that field will be automatically copied to the user's unsafe metadata once the sign up is complete.</>]},
+  ]}
+  />
 
 ### `delete()`
 
