docs: Finish documenting the base user methods

--- a/src/pages/reference-js/user/user.mdx
+++ b/src/pages/reference-js/user/user.mdx
@@ -107,11 +107,38 @@ Add the user's profile image or replace it if one already exists. This method wi
 
 #### `SetProfileImageParams`
 
-// TODO: Write
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>file</code>, <code>Blob | File | string | null</code>, <>The file to set as the user's profile image.</>]}
+ ]}
+  />
 
 #### Returns
 
-// TODO: Write
+
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<a href="#imageresource"><code>ImageResource</code></a>, <>The uploaded image.</>]}
+ ]}
+  />
+
+
+##### `ImageResource`
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>id</code>, <code>string | undefined | null</code>, <>The unique identifier of the image.</>]},
+{cells: [<code>name</code>, <code>string | null</code>, <>The name of the image.</>]},
+{cells: [<code>publicUrl</code>, <code>string | null</code>, <>The publically accessible url for the image.</>]}
+ ]}
+  />
+
 
 ### `getSessions()`
 
@@ -123,7 +150,15 @@ Retrieves all **active** sessions for this user. This method uses a cache so a n
 
 #### Returns
 
-// TODO: Write
+
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code><a href="/reference-js/session-with-activities">SessionWithActivities</a>[]</code>, <>The list of active user sessions.</>]}
+ ]}
+  />
+
 
 ### `isPrimaryIdentification()`
 
@@ -131,8 +166,17 @@ Retrieves all **active** sessions for this user. This method uses a cache so a n
 function isPrimaryIdentification: (ident: EmailAddressResource | PhoneNumberResource | Web3WalletResource) => boolean;
 ```
 
-A check whether or not the given identifier is the primary identifier for the user.
+A check whether or not the given resource is the primary identifier for the user.
 
 #### Params
 
-// TODO: Write
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>ident</code>, <code>
+<a href="/reference-js/email-address/email-address">EmailAddress</a> | <a href="/reference-js/phone-number/phone-number">PhoneNumber</a> | <a href="/reference-js/web3-wallet/web3-wallet">Web3Wallet</a>
+</code>, <>The resource checked against the user to see if it is the primary identifier.</>]},
+ ]}
+  />
