docs: finish documenting the TOTP page

--- a/src/pages/reference-js/user/totp.mdx
+++ b/src/pages/reference-js/user/totp.mdx
@@ -15,9 +15,17 @@ function createTOTP(): Promise<TOTPResource>;
 
 Generates a TOTP secret for a user that can be used to register the application on the user's authenticator app of choice. Note that if this method is called again (while still unverified), it replaces the previously generated secret.
 
+
 #### Returns
 
-// TODO: Write
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<a href="#totpresource"><code>TOTPResource</code></a>, <>The newly created TOTP object.</>]}
+ ]}
+  />
+
 
 ### `verifyTOTP()`
 
@@ -29,11 +37,24 @@ Verifies a TOTP secret after a user has created it. The user must provide a code
 
 #### `VerifyTOTPParams`
 
-// TODO: Write
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>code</code>, <code>string</code>, <>A 6 digit TOTP generated from the user's authenticator app.</>]}
+ ]}
+  />
 
 #### Returns
 
-// TODO: Write
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<a href="#totpresource"><code>TOTPResource</code></a>, <>The newly verified TOTP object.</>]}
+ ]}
+  />
+
 
 ### `disableTOTP()`
 
@@ -45,7 +66,13 @@ Disables TOTP by deleting the user's TOTP secret.
 
 #### Returns
 
-// TODO: Write
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<a href="/reference-js/types/deleted-object"><code>DeletedObject</code></a>, <>The a reference to the deleted TOTP object.</>]}
+ ]}
+  />
 
 ### `createBackupCode()`
 
@@ -55,9 +82,16 @@ function createBackupCode(): Promise<BackupCodeResource>;
 
 Generates a fresh new set of backup codes for the user. Note that if this method is called again, it replaces the previously generated codes.
 
+
 #### Returns
 
-// TODO: Write
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<a href="#backupcoderesource"><code>BackupCodeResource</code></a>, <>The newly created backup code.</>]}
+ ]}
+  />
 
 ## Types
 
