docs: finish password management page

--- a/src/pages/reference-js/user/password-management.mdx
+++ b/src/pages/reference-js/user/password-management.mdx
@@ -13,6 +13,19 @@ function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
 
 Updates the user's password.
 
+### `UpdateUserPasswordParams`
+
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>newPassword</code>, <code>string</code>, <>The user's new password.</>]},
+{cells: [<code>currentPassword</code>, <code>string</code>, <>The user's current password.</>]},
+{cells: [<code>signOutOfOtherSessions</code>, <code>boolean | undefined</code>, <>If set to true, all sessions will be signed out.</>]}
+ ]}
+  />
+
 ## `removePassword()`
 
 ```typescript
@@ -20,3 +33,15 @@ function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
 ```
 
 Removes the user's password.
+
+### `RemoveUserPasswordParams`
+
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>currentPassword</code>, <code>string</code>, <>The user's current password.</>]},
+ ]}
+  />
+
