docs: finish documenting the other methods

--- a/src/pages/reference-js/user/create-metadata.mdx
+++ b/src/pages/reference-js/user/create-metadata.mdx
@@ -15,11 +15,24 @@ Adds an email address for the user. A new <a href="/reference-js/email-address/e
 
 ### `CreateEmailAddressParams`
 
-// TODO: Write
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>email</code>, <code>string</code>, <>The value of the email address, the actual email box address.</>]},
+  ]}
+  />
 
 ### Returns
 
-// TODO: Write
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>Promise{"<"}<a href="/reference-js/email-address/email-address">EmailAddress</a>{">"}</code>, <>The email address created for the user.</>]}
+ ]}
+  />
+
 
 ## `createPhoneNumber()`
 
@@ -31,11 +44,23 @@ Adds a phone number for the user. A new <a href="/reference-js/phone-number/phon
 
 ### `CreatePhoneNumberParams`
 
-// TODO: Write
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>phoneNumber</code>, <code>string</code>, <>The value of the phone number, in <a href="https://en.wikipedia.org/wiki/E.164" target="_blank" rel="noopener">E.164</a> format.</>]},
+  ]}
+  />
 
 ### Returns
 
-// TODO: Write
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>Promise{"<"}<a href="/reference-js/phone-number/phone-number">PhoneNumber</a>{">"}</code>, <>The phone number created for the user.</>]}
+ ]}
+  />
 
 ## `createWeb3Wallet()`
 
@@ -47,11 +72,23 @@ Adds a web3 wallet for the user. A new <a href="/reference-js/web3-wallet/web3-w
 
 ### `CreateWeb3WalletParams`
 
-// TODO: Write
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>web3Wallet</code>, <code>string</code>, <>In <a href="https://docs.metamask.io/guide/common-terms.html#address-public-key">Ethereum</a>, the address is made up of <strong><code>0x + 40 hexadecimal characters</code></strong>. </>]},
+  ]}
+  />
 
 ### Returns
 
-// TODO: Write
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>Promise{"<"}<a href="/reference-js/web3-wallet/web3-wallet">Web3Wallet</a>{">"}</code>, <>The web3 wallet created for the user.</>]}
+ ]}
+  />
 
 ## `createExternalAccount()`
 
@@ -63,9 +100,31 @@ Adds an external account for the user. A new <a href="/reference-js/external-acc
 
 ### `CreateExternalAccountParams`
 
-// TODO: Write
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>strategy</code>, <code>string</code>, <>The strategy corresponding to the oauth provider, e.g. <code>oauth_facebook</code>, <code>oauth_github</code>, etc</>]},
+{cells: [<code>redirectUrl</code>, <code>string</code>, <>The URL to redirect back to one the oauth flow has completed successfully or unsuccessfully.</>]},
+{cells: [<code>additionalScopes</code>, <code>string[]</code>, <>Any additional scopes you would like your user to be prompted to approve.</>]}
+ ]}
+  />
 
 ### Returns
 
-// TODO: Write
 
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>Promise{"<"}<a href="/reference-js/external-account">ExternalAccount</a>{">"}</code>, <>The external account created for the user.</>]}
+ ]}
+  />
+
+The initial `state` of the returned ExternalAccount will be `unverified`. To initiate the connection with the external provider one should redirect to the `externalAccount.verification.externalVerificationRedirectURL` contained in the result of `createExternalAccount`.
+
+Upon return, one can inspect within the `user.externalAccounts` the entry that corresponds to the requested strategy:
+
+- If the connection was successful then `externalAccount.verification.status` should be `verified`
+- If the connection was not successful, then the `externalAccount.verification.status` will not be `verified` and the `externalAccount.verification.error` will contain the error encountered so that you can present corresponding feedback to the user
