--- a/src/pages/reference-js/user/totp.mdx
+++ b/src/pages/reference-js/user/totp.mdx
@@ -22,7 +22,7 @@ Generates a TOTP secret for a user that can be used to register the application 
   headings={["Type", "Description"]}
   headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
-{cells: [<a href="#totpresource"><code>TOTPResource</code></a>, <>The newly created TOTP object.</>]}
+{cells: [<code>Promise{"<"}<a href="#totpresource">TOTPResource</a>{">"}</code>, <>The newly created TOTP object.</>]}
  ]}
   />
 
@@ -51,7 +51,7 @@ Verifies a TOTP secret after a user has created it. The user must provide a code
   headings={["Type", "Description"]}
   headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
-{cells: [<a href="#totpresource"><code>TOTPResource</code></a>, <>The newly verified TOTP object.</>]}
+{cells: [<code>Promise{"<"}<a href="#totpresource">TOTPResource</a>{">"}</code>, <>The newly verified TOTP object.</>]}
  ]}
   />
 
@@ -70,7 +70,7 @@ Disables TOTP by deleting the user's TOTP secret.
   headings={["Type", "Description"]}
   headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
-{cells: [<a href="/reference-js/types/deleted-object"><code>DeletedObject</code></a>, <>The a reference to the deleted TOTP object.</>]}
+{cells: [<code>Promise{"<"}<a href="/reference-js/types/deleted-object">DeletedObject</a>{">"}</code>, <>The a reference to the deleted TOTP object.</>]}
  ]}
   />
 
@@ -89,7 +89,7 @@ Generates a fresh new set of backup codes for the user. Note that if this method
   headings={["Type", "Description"]}
   headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
-{cells: [<a href="#backupcoderesource"><code>BackupCodeResource</code></a>, <>The newly created backup code.</>]}
+{cells: [<code>Promise{"<"}<a href="#backupcoderesource">BackupCodeResource</a>{">"}</code>, <>The newly created backup code.</>]}
  ]}
   />
 
