--- a/src/pages/reference-js/user/user.mdx
+++ b/src/pages/reference-js/user/user.mdx
@@ -122,7 +122,7 @@ Add the user's profile image or replace it if one already exists. This method wi
   headings={["Type", "Description"]}
   headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
-{cells: [<a href="#imageresource"><code>ImageResource</code></a>, <>The uploaded image.</>]}
+{cells: [<code>Promise{"<"}<a href="#imageresource">ImageResource</a>{">"}</code>, <>The uploaded image.</>]}
  ]}
   />
 
@@ -155,7 +155,7 @@ Retrieves all **active** sessions for this user. This method uses a cache so a n
   headings={["Type", "Description"]}
   headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
-{cells: [<code><a href="/reference-js/session-with-activities">SessionWithActivities</a>[]</code>, <>The list of active user sessions.</>]}
+{cells: [<code>Promise{"<"}<a href="/reference-js/session-with-activities">SessionWithActivities</a>[]{">"}</code>, <>The list of active user sessions.</>]}
  ]}
   />
 
