--- a/src/pages/reference-js/user/user.mdx
+++ b/src/pages/reference-js/user/user.mdx
@@ -180,3 +180,26 @@ A check whether or not the given resource is the primary identifier for the user
 </code>, <>The resource checked against the user to see if it is the primary identifier.</>]},
  ]}
   />
+
+## Additional Methods
+
+In addition to the methods listed above, the `User` class also has the following methods:
+
+### Time-based One-Time Password (TOTP)
+
+*   [`createTOTP()`](/reference-js/user/totp#createtotp)
+*   [`verifyTOTP()`](/reference-js/user/totp#verifytotp)
+*   [`disableTOTP()`](/reference-js/user/totp#disabletotp)
+*   [`createBackupCode()`](/reference-js/user/totp#createbackupcode)
+
+### Password Management
+
+*   [`updatePassword()`](/reference-js/user/password-management#updatepassword)
+*   [`removePassword()`](/reference-js/user/password-management#removepassword)
+
+### Create Metadata
+
+*   [`createEmailAddress()`](/reference-js/user/create-metadata#createemailaddress)
+*   [`createPhoneNumber()`](/reference-js/user/create-metadata#createphonenumber)
+*   [`createWeb3Wallet()`](/reference-js/user/create-metadata#createweb3wallet)
+*   [`createExternalAccount()`](/reference-js/user/create-metadata#createexternalaccount)
